--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+/* @tailwind base; */
+/* @tailwind components; */
+/* @tailwind utilities; */
+@import url(./common/variable.css);
 .App {
   text-align: center;
 }
