--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,3 +1,7 @@
 ul li a{
     color: var(--primary-purple);
+    transition: .3s ease;
+}
+ul li a:hover{
+    background-color: var(--primary-purple-hover);
 }
