faqs section done

--- a/src/components/Questions/questions.css
+++ b/src/components/Questions/questions.css
@@ -10,4 +10,17 @@
     padding-block: 15px;
     padding-inline: 58px;
     border-radius: 10px;
+    transition: background .3s ease;
+}
+.faq-question .heading .btn-pink:hover{
+    background: #fa53bd;
+}
+.faq-question .faqs{
+    width: 40%;
+}
+.faq-question .faqs .question{
+    font-size: 18px;
+    color: var(--primary-purple);
+    cursor: pointer;
+    margin-bottom: .1em;
 }
