--- a/src/components/Benefits/benefit.css
+++ b/src/components/Benefits/benefit.css
@@ -1,15 +1,15 @@
 .benefits-text h1{
-    width: 70%;
-    font-size: 60px;
-    font-weight: 600;
-    line-height: 72px;
+    /* width: 70%; */
+    /* font-size: 60px;
+    font-weight: 600; */
+    /* line-height: 72px; */
     letter-spacing: 1%;
     color: var(--primary-purple);
 }
 .benefits-text p{
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 28.8px;
+    /* font-weight: 500;
+    font-size: 24px; */
+    /* line-height: 28.8px; */
     letter-spacing: 1%; 
-    width: 65%;
+    /* width: 65%; */
 }
