--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -1,8 +1,3 @@
-.feature-grid{
-    display: grid;
-    grid-template-columns: repeat(11,1fr);
-    width: 82%;
-}
 .feature{
     border-radius: 20px;
     box-shadow: 0px 130px 52px rgba(0, 0, 0, 0.01), 0px 73px 44px rgba(0, 0, 0, 0.05), 0px 8px 18px rgba(0, 0, 0, 0.1);
@@ -12,23 +7,24 @@
     padding-bottom: 1.5em;
     margin-bottom: 46px;
     margin-right: 1.5em;
+    max-width: 400px;
 }
 .feature h1{
     color: var(--primary-purple);
-    font-size: 35px;
-    line-height: 42px;
-    font-weight: 500;
-    letter-spacing: 1%;
+    /* font-size: 35px; */
+    /* line-height: 42px; */
+    /* font-weight: 500; */
+    /* letter-spacing: 1%; */
     margin-bottom: .2em;
 }
 .feature p{
-    font-size: 18px;
-    line-height: 1.4;
+    /* font-size: 18px; */
+    /* line-height: 1.4; */
     letter-spacing: 1%;
-    font-weight: 400;
+    /* font-weight: 400; */
 }
 .feature img{
-    width: 45px;
+    /* width: 45px; */
     margin-bottom: 38px;
 }
 .broadband,
@@ -43,6 +39,12 @@
 .co-working-space{
     background: #FFF0F4;
 }
+@media all and (min-width:980px) {
+    .feature-grid{
+        display: grid;
+        grid-template-columns: repeat(11,1fr);
+        width: 82%;
+    }
 .broadband,
 .kk{
     grid-column: 1/4;
@@ -54,4 +56,5 @@
 .education,
 .vacation{
     grid-column: 9/12;
+}  
 }
