spend section mobile layout

--- a/src/components/Spend/spend.css
+++ b/src/components/Spend/spend.css
@@ -1,14 +1,15 @@
 .men{
     position: relative;
 }
-.men-text{
-    font-size: 43px;
-    line-height: 53px;
-    font-weight: 400;
-    letter-spacing: 0.2em;
-    width: 40%;
-    height: 260px;
-    position: absolute;
+/* .men-text{
+    /* font-size: 43px; */
+    /* line-height: 53px; */
+    /* font-weight: 400; */
+    /* letter-spacing: 0.2em; */
+    /* width: 40%;
+    height: 260px; */
+    /* position: absolute;
     top: 20%;
     right: 15%;
 }
+    */
